--- a/index.html
+++ b/index.html
@@ -1,84 +1,68 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <title>Big Duck</title>
-  </head>
-  <body style="background-color: #434c5e;">
-    <header></header>
-    <main style="text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-      <div style="margin-left: 25%; margin-right: 25%; background-color: #d8dee9;">
-        <h1 style="font-size: 48pt;">BIG DUCK</h1>
-        <i><a id="underduck"></a></i>
-        <script>
-          const messages = ['the duckening', 'frogs', 'i forgor 💀', 'space pirates', 'E', 'object Object', '|  ||  ||  | --', 'a̵̧̧̛̦̳̠͙̟̗̺͍͎̼͍͈͓̤̝͛̅̄̈̓́͘͠͝a̶̖̻̬̲̭̯̺̫̪̠̱̞͂̔̆̊̓͘͝ͅạ̷̡͚͕̤͙̜̜̔̓́͑͛͛̃̕ä̷̢̛̜̤̖̞̗̰͓̣͔̜͉́͌á̷̡̨̰͕̟̟͎͙̠̖̬̮́̐̌̈́̃̅̈́̉͒̏́̇͊̚͝͝ͅa̵͔̗̭͕̮̩͇̺͈̤̍̃̔͐̽͆̏̇̽̀͘̚̚̕͠͠ͅa̸̢̛͔͉̭͓̬͖̼̺̟͔͉͛̄̈̈̑̈́͋̀̆̐̉̇̀͌̇͠a̷̡͙̘̜͈̥̬̫̺̿̔͘ͅa̵̢̧͍̺̩̻͔̳͕̞̗͙͓̮͌̎̍̀̀̊̍̿̂̈́̃́͆͌̄̚̕͜a̴̞͉̺̤̍̓͒͗̽̐͒̐͜͠', 'can probably run in Internet Explorer'];
-          const randomIndex = Math.round(Math.random()*messages.length);
-          document.getElementById("underduck").innerHTML = messages[randomIndex];
-        </script>
-        <div style="margin-top: 48pt;">
-          <table style="border-collapse:collapse;border-spacing:0;border:none; width: 100%;" class="tg"><thead><tr><td style="background-color:#bf616a;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#d08770;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#ebcb8b;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#a3be8c;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#88c0d0;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#b48ead;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td></tr></thead></table>
-        </div>
-        <div>
-          <a>
-            <pre id="duckPic">
-                                                                                        
-              ▒▒▒▒▒▒▒▒▒▒▒▒                                            
-              ▒▒▒▒▒▒▒▒▒▒▒▒▓▓▒▒                                          
-            ▓▓▒▒▒▒░░░░░░░░░░▓▓▓▓                                        
-          ░░▒▒▒▒░░▓▓░░░░░░░░░░▓▓                                        
-          ░░▒▒▒▒░░▒▒░░░░░░  ░░▓▓▒▒                                      
-      ░░▓▓░░▒▒▒▒▒▒░░░░░░░░░░░░▒▒▓▓                                      
-░░░░░░░░░░░░▒▒▒▒▒▒▒▒░░░░▒▒▒▒░░░░▓▓                                      
-                  ▒▒▓▓▓▓▒▒▒▒░░▒▒▓▓                                      
-                      ▓▓▒▒░░░░▒▒▓▓                                      
-                      ▓▓▒▒░░░░▒▒                                        
-                    ▓▓▒▒░░  ░░▒▒                                        
-                ▓▓▓▓▒▒░░░░░░▓▓                                          
-            ▓▓▒▒▒▒▒▒▒▒▒▒░░▒▒                                            
-          ▓▓▓▓  ▓▓▓▓▓▓▓▓▓▓                                              
-        ▓▓██▓▓▓▓        ▓▓▒▒▒▒▒▒▒▒                                      
-      ██▓▓▒▒▓▓▓▓▓▓▓▓██▓▓██░░░░░░▒▒▒▒▒▒▒▒                                
-    ▓▓▓▓▒▒▓▓▓▓▓▓▓▓▓▓████░░░░░░░░░░░░░░▓▓▓▓▓▓                            
-    ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓██▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░  ▓▓▓▓                        
-  ██▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒░░▓▓▓▓▓▓▓▓▒▒▒▒▒▒░░░░░░  ▓▓▓▓                    
-  ██▒▒▓▓▓▓▓▓▓▓██▒▒▒▒▒▒▒▒▒▒░░░░████▓▓▓▓▒▒▒▒▒▒▒▒░░░░  ▓▓▓▓                
-  ██▒▒▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░████▓▓▓▓▒▒▒▒▒▒░░░░    ▓▓              
-  ██▓▓▓▓▓▓██▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░██████████▓▓▓▓░░░░  ▓▓▓▓          
-  ██▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░████████████▒▒▓▓░░░░▓▓        
-  ██▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░  ████████░░░░▓▓▓▓    ▓▓    
-  ████▓▓██▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░    ██░░██████▓▓██    ██  
-    ██████▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░  ▓▓████████▓▓▓▓▓▓    
-    ░░████▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒░░            ░░  ░░░░░░
-        ▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░██████░░░░░░░░░░░░  
-          ▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░████▓▓▓▓          
-            ▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                  
-                ▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                              
-                          ▓▓▓▓▓▓▓▓▓▓                                    
-                          ▒▒▓▓▒▒▓▓▒▒                                    
-                            ▒▒  ▒▒                                      
-                            ▒▒  ▒▒                                      
-                            ▒▒  ▒▒                                      
-                            ▒▒  ▒▒                                      
-                  ▒▒▒▒▒▒▒▒  ▒▒  ▒▒                                      
-              ░░░░▒▒▒▒▒▒▒▒░░▒▒▒▒▒▒                                      
+<html lang="en">
 
-            </pre>
-          </a>
-        </div>
-        <div style="padding: 12pt;">
-          <button onclick="moreDuck()" class="moreDuckBTN" style="">More duck</button>
-          <style>.moreDuckBTN{width: 200pt; height: 50pt; font-size: x-large; color: white; background-color: #5e81ac; cursor: pointer;} .moreDuckBTN:hover{background-color: #2e3440; transition: 0.3s;}</style>
-          <script>
-            function moreDuck(){
-              var duckPic = document.getElementById('duckPic').innerHTML;
-              var duckPicClone = document.createElement('per');
-              duckPicClone.innerHTML = duckPic;
-              document.getElementById('duckPic').appendChild(duckPicClone);
-            }
-          </script>
-        </div>
-      </div>
-    </main>
-    <footer></footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Duckland</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="subtitle.js"></script>
+  <script src="moreDuck.js"></script>
+</head>
+
+<body onload="getSubtitle()">
+  <main>
+    <h2 class="title">BIG DUCK</h2>
+    <i><a id="subtitle"></a></i>
+    <div class="stripe"><table style="border-collapse:collapse;border-spacing:0;border:none; width: 100%;" class="tg"><thead><tr><td style="background-color:#bf616a;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#d08770;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#ebcb8b;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#a3be8c;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#88c0d0;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td><td style="background-color:#b48ead;border-style:solid;border-width:0px;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td></tr></thead></table></div>
+    <div>
+      <pre id="duckPic">
+        
+        ▒▒▒▒▒▒▒▒▒▒▒▒                                              
+        ▒▒▒▒▒▒▒▒▒▒▒▒▓▓▒▒                                          
+      ▓▓▒▒▒▒░░░░░░░░░░▓▓▓▓                                        
+    ░░▒▒▒▒░░▓▓░░░░░░░░░░▓▓                                        
+    ░░▒▒▒▒░░▒▒░░░░░░  ░░▓▓▒▒                                      
+░░▓▓░░▒▒▒▒▒▒░░░░░░░░░░░░▒▒▓▓                                      
+░░░░░░░░░░░░▒▒▒▒▒▒▒▒░░░░▒▒▒▒░░░░▓▓                                      
+            ▒▒▓▓▓▓▒▒▒▒░░▒▒▓▓                                      
+                ▓▓▒▒░░░░▒▒▓▓                                      
+                ▓▓▒▒░░░░▒▒                                        
+              ▓▓▒▒░░  ░░▒▒                                        
+          ▓▓▓▓▒▒░░░░░░▓▓                                          
+      ▓▓▒▒▒▒▒▒▒▒▒▒░░▒▒                                            
+    ▓▓▓▓  ▓▓▓▓▓▓▓▓▓▓                                              
+  ▓▓██▓▓▓▓        ▓▓▒▒▒▒▒▒▒▒                                      
+██▓▓▒▒▓▓▓▓▓▓▓▓██▓▓██░░░░░░▒▒▒▒▒▒▒▒                                
+▓▓▓▓▒▒▓▓▓▓▓▓▓▓▓▓████░░░░░░░░░░░░░░▓▓▓▓▓▓                            
+▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓██▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░  ▓▓▓▓                        
+██▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒░░▓▓▓▓▓▓▓▓▒▒▒▒▒▒░░░░░░  ▓▓▓▓                    
+██▒▒▓▓▓▓▓▓▓▓██▒▒▒▒▒▒▒▒▒▒░░░░████▓▓▓▓▒▒▒▒▒▒▒▒░░░░  ▓▓▓▓                
+██▒▒▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░████▓▓▓▓▒▒▒▒▒▒░░░░    ▓▓              
+██▓▓▓▓▓▓██▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░██████████▓▓▓▓░░░░  ▓▓▓▓          
+██▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░████████████▒▒▓▓░░░░▓▓        
+██▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░  ████████░░░░▓▓▓▓    ▓▓    
+████▓▓██▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░    ██░░██████▓▓██    ██  
+██████▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░  ▓▓████████▓▓▓▓▓▓    
+░░████▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒░░            ░░  ░░░░░░
+  ▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░██████░░░░░░░░░░░░  
+    ▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░████▓▓▓▓          
+      ▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                  
+          ▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                              
+                    ▓▓▓▓▓▓▓▓▓▓                                    
+                    ▒▒▓▓▒▒▓▓▒▒                                    
+                      ▒▒  ▒▒                                      
+                      ▒▒  ▒▒                                      
+                      ▒▒  ▒▒                                      
+                      ▒▒  ▒▒                                      
+            ▒▒▒▒▒▒▒▒  ▒▒  ▒▒                                      
+        ░░░░▒▒▒▒▒▒▒▒░░▒▒▒▒▒▒                                      
+
+      </pre>
+    </div>
+    <button onclick="moreDuck()" class="moreDuckBTN">More duck</button>
+  </main>
+</body>
+
 </html>
