--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Duckland</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="icon.png">
   <script src="subtitle.js"></script>
   <script src="moreDuck.js"></script>
 </head>
@@ -62,7 +63,7 @@
       </pre>
     </div>
     <button onclick="moreDuck()" class="moreDuckBTN">More duck</button>
+    <div style="font-size: 12px;"><a target="_blank" href="https://icons8.com/icon/vt9RtlrQrAqu/biology">Biology</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a><div>
   </main>
 </body>
-
 </html>
